--- a/src/resources/cjd/resources/cjd-r.css
+++ b/src/resources/cjd/resources/cjd-r.css
@@ -19,6 +19,12 @@ pre { margin-left: 4mm; margin-top: 2mm; margin-bottom: 2mm; }
 pre.u { margin-left: 4mm; margin-top: 0; margin-bottom: 0; color: rgb(193,209,255);}
 pre.r { margin-left: 4mm; margin-top: 0; margin-bottom: 0; color: rgb(255,193,234);}
 .prompt { color: white; }
+div.spacer { 
+	margin-top: 8pt; 
+	margin-bottom: 8pt; 
+	padding-top: 4pt; 
+	padding-bottom: 4pt; 
+	border: thin solid grey; }
 
 a { color: rgb(247,202,102);  } /* rgb(186,17,255) */
 a:link { text-decoration: none }
